- new default for thumbnails is rectangle too (avoid image distortion) - adapt image placement for rectangle thumbnails, so portrait photos are centered too - clearout some unnecessary css styles

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -68,10 +68,6 @@ em{font-style:italic;font-weight:inherit;line-height:inherit;}
 .muted,.muted a{color:#bfbfbf;}
 blockquote{margin-bottom:21px;border-left:5px solid #eee;padding-left:15px;}blockquote p{font-size:14px;font-weight:300;line-height:21px;margin-bottom:0;}
 blockquote small{display:block;font-size:12px;font-weight:300;line-height:21px;color:#bfbfbf;}blockquote small:before{content:'\2014 \00A0';}
-address{display:block;line-height:21px;margin-bottom:21px;}
-code,pre{padding:0 3px 2px;font-family:Monaco, Andale Mono, Courier New, monospace;font-size:12px;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;}
-code{background-color:#fee9cc;color:rgba(0, 0, 0, 0.75);padding:1px 3px;}
-pre{background-color:#f5f5f5;display:block;padding:20px;margin:0 0 21px;line-height:21px;font-size:12px;border:1px solid #ccc;border:1px solid rgba(0, 0, 0, 0.15);-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;white-space:pre-wrap;}
 .topbar{height:40px;position:fixed;top:0;left:0;right:0;z-index:10000;overflow:visible;}.topbar .fill{background:#222;background-color:#222222;background-repeat:repeat-x;background-image:-khtml-gradient(linear, left top, left bottom, from(#333333), to(#222222));background-image:-moz-linear-gradient(#333333, #222222);background-image:-ms-linear-gradient(#333333, #222222);background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #333333), color-stop(100%, #222222));background-image:-webkit-linear-gradient(#333333, #222222);background-image:-o-linear-gradient(#333333, #222222);background-image:linear-gradient(#333333, #222222);-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);box-shadow:0 1px 3px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);}
 .topbar h3{position:relative;}.topbar h3 a{float:left;display:block;padding:8px 20px 12px;margin-left:-20px;color:#ffffff;font-size:20px;font-weight:200;line-height:1;}
 .below{margin-top:60px;}
@@ -82,3 +78,4 @@ footer{margin-top:20px;padding-top:20px;border-top:1px solid #eee;}
 .pagination ul li.next a{border:0;}
 .caption{margin-top:10px;text-align:right;font-style:italic;}
 .span16 img {display: block; margin: 0 auto;}
+div.span4 {text-align: center;}
